# postgrest-query

./: Cargo.toml  README.MD  rustfmt.toml
examples/: basic.rs  rpc.rs
src/: builder.rs  client.rs  filter.rs  handler.rs  lib.rs
tests/: integration.rs
