[package]
name = "postgrest-query"
version = "0.1.0"
edition = "2021"
description = "A type-safe query builder-esque experience via PostgREST"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.23"
serde = "1.0.193"
serde_json = "1.0.108"
url = "2.5.0"
