[package]
name = "postgrest-query"
version = "0.1.0"
edition = "2021"
description = "A type-safe query builder-esque experience via PostgREST"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "basic"
path = "examples/basic.rs"

[dependencies]
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
url = "2.5.0"

[dev-dependencies]
postgrest-query = { path = "../postgrest-query" }
tokio = { version = "1.27.0", features = ["full"] }
